Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 2.7.0-beta
-
Fix Version/s: None
-
Component/s: All Other Issues, Editors
-
Labels:
-
Environment:Kubuntu 12.10
Description
Line 178 in src/plugins/qnx/bardescriptordocument.cpp; "codec()->name()" returns "System" which ultimately breaks blackberry-nativepackager with the cryptic "Error: System" message.
Changing this first line manually in the bar descriptor editor is however not possible. Maybe hardcode this to "utf-8"?