QNX: Force UTF-8 encoding for bar-descriptor.xml (QTCREATORBUG-8853)

Change-Id: I354fe227d8b5446c25fcb928b09a29e69a2104d0
Reviewed-by: Nicolas Arnaud-Cormos <nicolas@kdab.com>
Reviewed-by: Mehdi Fekari <mfekari@rim.com>
Reviewed-by: Erik Verbruggen <erik.verbruggen@digia.com>